# Architeckt

./: .gitignore  CHANGELOG.md  CHANGELOG.ru.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  LICENSE  README.md  README.ru.md  __init__.py  pyproject.toml
configs/: __init__.py  base.py  medium.py  small.py
docs/: API_REFERENCE.md  API_REFERENCE.ru.md  ARCHITECTURE.md  ARCHITECTURE.ru.md  FAQ.md  FAQ.ru.md  INSTALLATION.md  INSTALLATION.ru.md  PERFORMANCE.md  PERFORMANCE.ru.md  TESTING_REPORT.md  TESTING_REPORT.ru.md
scripts/: plot_results.py  run_poc_training.py  train_real_data.py
src/activations/: __init__.py  swiglu_t.py
src/attention/: __init__.py  adaptive_heads.py  linear_attention.py  rope.py
src/benchmarks/: __init__.py  analysis.py  flops.py  latency.py  memory.py
src/inference/: __init__.py  adaptive_compute.py  confidence.py  early_exit.py  generator.py  inference_utils.py
src/layers/: __init__.py  linear.py  residual.py
src/models/: __init__.py  architeckt.py  block.py  config.py
src/normalization/: __init__.py  adaptive_norm.py
src/routing/: __init__.py  expert.py  token_router.py
src/training/: __init__.py  trainer.py
tests/: test_early_exit.py  test_model.py
