[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "architeckt"
version = "0.1.0"
description = "Architeckt: Next-Generation LLM Architecture with Linear Complexity"
authors = [
    { name = "Architeckt Research Team" }
]
license = { text = "Research Use Only" }
readme = "docs/README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.3.0",
]
training = [
    "datasets>=2.14",
    "transformers>=4.35",
    "wandb>=0.15",
]
benchmarks = [
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
include = ["models*", "attention*", "routing*", "normalization*",
           "activations*", "layers*", "inference*", "training*",
           "benchmarks*", "configs*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*test*.py", "*_test.py"]
